--- a/views/index.html
+++ b/views/index.html
@@ -1,10 +1,9 @@
 
 
 <h1>{{ title }}</h1>
-<p>This is a bare-bones template.</p>
+<p>{{pGraph}}</p>
 <ul>
 {% for person in people %}
   <li>{{ person.name }}</li>
 {% endfor %}
 </ul>
-
