added names to tweets

--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
 
       <!-- display tweets here -->
       {% for tweet in tweets %}
-        <li>{{tweet.name, tweet.content}}</li>
+        <li>{{tweet.name}}, {{tweet.content}}</li>
       {% endfor %}
 
     </div>
