--- a/views/index.html
+++ b/views/index.html
@@ -17,8 +17,19 @@
 
       <!-- display tweets here -->
       {% for tweet in tweets %}
-        <li>{{tweet.name}}, {{tweet.content}}</li>
+        <li><a href="/users/{{tweet.name}}">{{tweet.name}}</a> - {{tweet.content}}</li>
       {% endfor %}
+      {% if showForm %}
+          <form action="/tweets" method="POST">
+            <label for="name_field">Name:</label>
+            <input name="name" type="text" id="name_field" />
+
+            <label for="text_field">Text:</label>
+            <input name="text" type="text" id="text_field" style="width: 350px;" />
+
+            <input type="submit" value="Submit" />
+          </form>
+        {% endif %}
 
     </div>
   </div>
